# herring-onboarding

./: .gitignore  README.md
problem1/: CMakeLists.txt  README.md
problem10/: README.md  custom_ddp.py  model.py
problem11/: README.md  main.py
problem12/: README.md  hello.py  hello.slurm
problem13/: CMakeLists.txt  README.md
problem13/src/: buffer_ops.cu  buffer_ops.hpp  cuda_streams.cpp
problem2/: CMakeLists.txt  README.md
problem2/src/: mpi_hello_world.c
problem3/: CMakeLists.txt  README.md
problem3/src/: cpu_gpu.cpp
problem4/: CMakeLists.txt  README.md
problem4/src/: mpi_gpu.cpp
problem5/: CMakeLists.txt  README.md
problem5/modules/: FindNCCL.cmake
problem5/src/: nccl_allreduce.cpp
problem6/: CMakeLists.txt  README.md
problem6/src/: hello_world.cpp
problem7/: CMakeLists.txt  README.md
problem7/src/: simd_avx.cpp
problem8/: README.md
problem9/: README.md  main.py
